--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
                 <div class="div--tamanho">Tamanho:</div>
                 <div data-key="38" class="tamanho--produto"><span>--</span></div>
                 <div data-key="39" class="tamanho--produto"><span>--</span></div>
-                <div data-key="40" class="tamanho--produto"><span>--</span></div>
+                <div data-key="40" class="tamanho--produto selecionado"><span>--</span></div>
+            </div>
+            <div class="area--quantidade--produtos">
+                <div class="div--quantidade">Quantidade:</div>
+                <button class="quantidade--menos">-</button>
+                <div class="quantidade--produtos">1</div>
+                <button class="quantidade--mais">+</button>
             </div>
             <button class="button--addCarrinho">Adicionar ao carrinho</button>
             <button class="button--cancelar">Cancelar</button>
