ajustes de media query

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     </main>
     <!--Carrinho de compras-->
     <aside class="carrinho">
-        <div><span class="material-symbols-outlined">close</span></div>
         <div class="div--carrinho">
+            <div><span class="material-symbols-outlined">close</span></div>
             <h1>Seus Produtos</h1>
             <!--Mudar nome classes-->
+            <div class="item--no--carrinho"></div>
             <div class="info--compra">
                 <div class="div--valor--item subtotal">
                     <span>Subtotal</span>
