--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     
     <script src="tenis.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
     
 </body>
 </html>
