--- a/html/signup.html
+++ b/html/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>Document</title>
+    <title>Criar Cadastro</title>
 </head>
 <body>
     <div class="container">
