--- a/html/signup.html
+++ b/html/signup.html
@@ -27,7 +27,7 @@
   
           <div class="label-float">
             <input type="password" id="senha" placeholder=" " required />
-            <label id="labelSenha" for="senha">Senha</label>
+            <label id="labelSenha" for="senha">Senh</label>
             <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
           </div>
   
