--- a/html/signup.html
+++ b/html/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="../css/signup.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Criar Cadastro</title>
 </head>
@@ -27,7 +27,7 @@
   
           <div class="label-float">
             <input type="password" id="senha" placeholder=" " required />
-            <label id="labelSenha" for="senha">Senh</label>
+            <label id="labelSenha" for="senha">Senha</label>
             <i id="verSenha" class="fa fa-eye" aria-hidden="true"></i>
           </div>
   
