--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <header>
         <nav>
             <div class="div--logo"><img src="images/logo.svg" alt="logo Marca"></div>
-            <div class="menu-open">
-                <span class="material-symbols-outlined">search</span>
-                <span class="material-symbols-outlined">shopping_cart</span><span>-</span>
-                <span class="material-symbols-outlined">menu<span>
+            <div class="menu">
+                <span class="material-symbols-outlined icon">search</span>
+                <span class="material-symbols-outlined icon car">shopping_cart</span><span class="tem--produto--carrinho">¨</span>
+                <span class="material-symbols-outlined icon">menu<span>
             </div>
         </nav>
     </header>
@@ -51,7 +51,7 @@
     <!--Carrinho de compras-->
     <aside class="carrinho">
         <div class="div--carrinho">
-            <div><span class="material-symbols-outlined">close</span></div>
+            <div class="close--carrinho"><span class="material-symbols-outlined">close</span></div>
             <h1>Seus Produtos</h1>
             <!--Mudar nome classes-->
             <div class="item--no--carrinho"></div>
@@ -61,7 +61,7 @@
                     <span class="valor--item">R$ --</span>
                 </div>
                 <div class="div--valor--item desconto">
-                    <span>Desconto</span>
+                    <span>Desconto <strong>(-10%)</strong></span>
                     <span class="valor--item">R$ --</span>
                 </div>
                 <div class="div--valor--item total">
